Tests/RunCMake/MSVCRuntimeTypeInfo/CMP0117-OLD.cmake
@@ -1,0 +1,2 @@
+cmake_policy(SET CMP0117 OLD)
+include(CMP0117-common.cmake)
